--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
     <div class="landing">
        <div id="land"><img id="landimg"src="/landing.png"></div> 
-       <div id="invest"><h1>Invest in everything</h1></div>
+       <div id="invest"><h1>Invest in everything.</h1></div>
        <p style="font-size: 20px;">Online platform to invest in stocks, derivatives, mutual funds, and more</p>
        <a href="#"> <button > <a href="/signup.html" style="color: white;transform: scale(1,2);" id="signup">Sign up now</a></button>
     </div>
