--- a/index.html
+++ b/index.html
@@ -164,6 +164,101 @@ trades.</p></pre></div>
 
                     </ul>
                 </div>
+                <div class="column2">
+                    <ul class="liststyle1">
+                        <li class="navhead" style="list-style-type: none;">Support</li>
+                        <li><a href="#"> Contact us</a></li>
+                        <li><a href="#">Support portal</a></li>
+                        <li><a href="#">Z-Connect blog</a></li>
+                        <li><a href="#">List of charges</a></li>
+                        <li><a href="#">Downloads & resources</a></li>
+                        <li><a href="#">Videos</a></li>
+                        <li><a href="#">Market overview</a></li>
+                        <li><a href="#">How to file a complaint?</a></li>
+                        <li><a href="#">Status of your complaints</a></li>
+                    </ul>
+                </div>
+                <div class="column3">
+                    <ul class="liststyle3">
+                        <li class="navhead" style="list-style-type: none;">Account</li>
+                        <li><a href="#" style="margin-bottom: 20px;">Open an account</a></li>
+                        <li><a href="#">Fund transfer</a>/li>
+                    </ul>
+                </div>
+            </div>
+            <div class="rowsmallprint">
+                <p style="color: #9b9b9b; font-size: 10.2px;height:74px ;">
+                    Zerodha Broking Ltd.: Member of NSE, BSE​ &amp;​ MCX – SEBI
+                    Registration no.: INZ000031633 CDSL/NSDL: Depository services through Zerodha Broking Ltd. – SEBI Registration no.: IN-DP-431-2019
+                    Commodity Trading through Zerodha Commodities Pvt. Ltd. MCX: 46025; NSE-50001
+                    – SEBI Registration no.: INZ000038238 Registered Address: Zerodha
+                    Broking Ltd., #153/154, 4th Cross, Dollars Colony, Opp. Clarence Public
+                    School, J.P Nagar 4th Phase, Bengaluru - 560078, Karnataka, India. For
+                    any complaints pertaining to securities broking please write to
+                    </p>
+                    <p style="color: #9b9b9b;font-size: 10.2px; height: 38px;">
+                        Procedure to file a complaint on <a href="https://scores.sebi.gov.in/" target="_blank">SEBI SCORES</a>:
+                        Register on SCORES portal. Mandatory details for filing complaints on SCORES: Name, PAN, Address, Mobile Number,
+                        E-mail ID.
+                        Benefits: Effective Communication, Speedy redressal of the grievances
+                        </p>
+
+                        <p style=" color: #9b9b9b;font-size: 10.2px;height: 18.71px;">
+                            <a href="https://smartodr.in/" target="_blank">Smart Online Dispute Resolution</a> | <a href="https://zerodha-common.s3.ap-south-1.amazonaws.com/Downloads-and-resources/Smart%20ODR%20info.pdf" target="_blank">Grievances Redressal Mechanism</a>
+                        </p>
+                        <p style=" color: #9b9b9b;font-size: 10.2px;height: 58px;">
+                            Attention investors: 1. Stock brokers can accept securities as margins from clients only by way of pledge in the depository system w.e.f September 01, 2020. 2) Update your e-mail and phone number with your stock broker / depository participant and receive OTP directly from depository on your e-mail and/or mobile number to create pledge. 3) Check your securities / MF / bonds in the consolidated account statement issued by NSDL/CDSL every month.
+                            </p>
+
+                            <p style=" color: #9b9b9b;font-size: 10.2px;height: 113px;">
+                                "Prevent unauthorised transactions in your account. Update your mobile
+                                numbers/email IDs with your stock brokers. Receive information of your
+                                transactions directly from Exchange on your mobile/email at the end of
+                                the day. Issued in the interest of investors. KYC is one time exercise
+                                while dealing in securities markets - once KYC is done through a SEBI
+                                registered intermediary (broker, DP, Mutual Fund etc.), you need not
+                                undergo the same process again when you approach another intermediary."
+                                Dear Investor, if you are subscribing to an IPO, there is no need to
+                                issue a cheque. Please write the Bank account number and sign the IPO
+                                application form to authorize your bank to make payment in case of
+                                allotment. In case of non allotment the funds will remain in your bank
+                                account. As a business we don't give stock tips, and have not authorized
+                                anyone to trade on behalf of others. If you find anyone claiming to be
+                                part of Zerodha and offering such services, please
+                                <a href="https://support.zerodha.com/category/your-zerodha-account/your-profile/articles/how-do-i-place-a-complaint-at-zerodha">create
+                                    a ticket here</a>.
+                                </p>
+            </div>
+            <div class="footergraveyard">
+                <ul class="grave">
+                    <li style="margin-right: 5px;">
+                        <a href="https://nseindia.com">NSE</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://www.bseindia.com/">BSE</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://www.mcxindia.com/">MCX</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://zerodha.com/terms-and-conditions/">Terms &amp; conditions</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://zerodha.com/policies-and-procedures/">Policies &amp; procedures</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://zerodha.com/privacy-policy/">Privacy policy</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://zerodha.com/disclosure/">Disclosure</a>
+                    </li>
+                    <li style="margin-right: 5px; color: #9b9b9b;">
+                        <a href="https://zerodha.com/investor-attention/">For investor's attention</a>
+                    </li>
+                    <li style="margin-right: 5px;">
+                        <a href="https://zerodha.com/tos/investor-charter/">Investor charter</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </footer>
