--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
     
     <div class="landing">
        <div id="land"><img id="landimg"src="/landing.png"></div> 
-       <div id="invest"><h1>Invest in everything.</h1></div>
-       <p style="font-size: 20px; font-family: Inter serif; color: #424242;">Online platform to invest in stocks, derivatives, mutual funds, and more</p>
+       <div id="invest"><h1 style="font-weight: 400;">Invest in everything.</h1></div>
+       <p style="font-size: 20px; font-family: Inter serif; color: #424242; ">Online platform to invest in stocks, derivatives, mutual funds, and more</p>
        <a href="#"> <button > <a href="/signup.html" style="color: white;transform: scale(1,2);" id="signup">Sign up now</a></button>
     </div>
     <div class="main">
         <div class="div1"><img src="/image.png"></div>
         <div class="sub">
-            <div class="div2"><h2>Largest stock broker in India</h2></div>
+            <div class="div2"><h2 style="font-weight: 400;">Largest stock broker in India</h2></div>
         <div class="div3"><p>1.5+ Crore Zerodha clients contribute to over 15% of all retail order volumes in India daily by trading and investing in:</p></div>
         <div class="div4">
             <div class="div4left">
                 <ul>
-                    <li>Futures and Options</li>
-                    <li>Commodity derivatives</li>
-                    <li>Currency derivatives</li>
+                    <li style="list-style-type:disc">Futures and Options</li>
+                    <li style="list-style-type:disc">Commodity derivatives</li>
+                    <li style="list-style-type:disc">Currency derivatives</li>
                 </ul>
             </div>
             <div class="div4right">
                 <ul>
-                    <li>Stocks & IPOs</li>
-                    <li>Direct mutual funds</li>
-                    <li>Bonds and Govt.Securuties</li>
+                    <li style="list-style-type:disc">Stocks & IPOs</li>
+                    <li style="list-style-type:disc">Direct mutual funds</li>
+                    <li style="list-style-type:disc">Bonds and Govt.Securuties</li>
                 </ul>
             </div>
         </div>
@@ -60,21 +60,21 @@
     <div class="bottom">
         <div class="bottomleft">
         <div id="head1" ><h2 style="font-size: 32px; font-weight: 400;">Trust with confidence</h2></div>
-        <div id="head2" ><h3>Customer-first always</h3>
+        <div id="head2" ><h3 style="font-weight: 500;">Customer-first always</h3>
         <pre><p style="color: grey;">That's why 1.5+ crore customers trust Zerodha
 with 4.5+ lakh crores worth of quity investments.
         </p></pre></div>
-        <div id="head3"><h3>No spam or gimmicks</h3>
+        <div id="head3"><h3 style="font-weight: 500;">No spam or gimmicks</h3>
         <pre><p style="color: grey;">No gimmics,spam,"gammification",or annoying push
 notifications.High quality apps that you use at your
 pace,the way you like.                    
         </p></pre></div>
-        <div id="head4"><h3>The Zerodha Universe</h3>
+        <div id="head4"><h3 style="font-weight: 500;">The Zerodha Universe</h3>
             <pre><p style="color: grey;">Not just an app,but a whole ecosystem.Our investments
 in 30+ fintech startups offer you tailored services
 specific to your needs.</p></pre></div>
         <div id="head5">
-            <h3>Do better with money</h3>
+            <h3 style="font-weight: 500;">Do better with money</h3>
             <pre><p style="color: grey;">With inititatives like <b>Nudge</b> and<b> Kill Switch</b> , we don's just
 facilitate transactions,but actively help you do better
 with your money.             </p></pre>
@@ -89,7 +89,7 @@ with your money.             </p></pre>
     </div>
     <div class="pricing">
         <div class="pricingleft">
-            <h1>Unbeatable pricing</h1>
+            <h1 style="font-weight: 400;">Unbeatable pricing</h1>
             <pre><p>We pioneered the concept of discount broking and price
 transparency in India.Flat fees and no hidden charges.
             </p></pre>
@@ -105,10 +105,10 @@ transparency in India.Flat fees and no hidden charges.
 
         </div>
         <div class="varsityright">
-            <h1>Free and open market education</h1>
-            <pre><p>Varsity, the largest online stock market education book in the world
+            <h1 style="font-weight: 400;">Free and open market education</h1>
+            <pre><p style="margin-bottom: 10px;">Varsity, the largest online stock market education book in the world
 covering everything from the basics to advanced trading.
-<a href="#">Varsity <i class="fa-solid fa-arrow-right"></i> </a>
+<a href="#" style="margin-top: 10px;">Varsity <i class="fa-solid fa-arrow-right"></i> </a>
             </p></pre>
             <br>
             <pre><p>TradingQ&A, the most active trading and investment community in
@@ -118,7 +118,7 @@ India for all your market related queries.
         </div>
     </div>
     <div class="lower">
-        <div id="lower1"><h1>Open a Zerodha account</h1></div>
+        <div id="lower1"><h1 style="font-weight: 400;">Open a Zerodha account</h1></div>
         
         <div id="lower2"><pre><p style="color: grey;">Modern platform and apps,₹0 investments,and flat ₹20 intraday and F&O
 trades.</p></pre></div>
