--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <div class="header">
-        <img id="logo" src="/img.png">
+       <div class="headerlogo"> <img id="logo" src="/zerodhafooter.png"></div>
         <div class="options">
             <div id="Signup"><a href="/signup.html" >Sign up</a></div>
             <div id="About"><a href="/about.html"  >About</a></div>
             <div id="Products"><a href="#" >Products</a></div>
             <div id="Pricing"><a href="#" >Pricing</a></div>
             <div id="Support"><a href="#" >Support</a></div>
-            <div id="men"><a href="#"><img id="menu" src="/menu image.jpeg"></a></div>
+            <div id="men"><i class="fa-solid fa-bars"></i></a></div>
             
             
         </div>
