--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
     
     
     <div class="landing">
-       <div id="land"><img id="landimg"src="/landing.png"></div> 
-       <div id="invest"><h1 style="font-weight: 400;">Invest in everything.</h1></div>
-       <p style="font-size: 20px; font-family: Inter serif; color: #424242; ">Online platform to invest in stocks, derivatives, mutual funds, and more</p>
-       <a href="#"> <button > <a href="/signup.html" style="color: white;transform: scale(1,2);" id="signup">Sign up now</a></button>
+       <div class="landi">
+        <img id="landimg"src="/landing.png">
+    </div> 
+      <div class="landr"> 
+        <div class="invest"><h1 style="font-weight: 500;font-size: 44px;">Invest in everything</h1></div>
+       <h5 style="font-size: 20px; font-family: Inter ,serif; color: #424242;margin-bottom: 20px;margin-top: 0px;font-weight: 400; ">Online platform to invest in stocks, derivatives, mutual funds, and more</h5>
+        <div class="button1"><button > <a href="/signup.html" style="color: white; padding-top: 60px; ">Sign up now</a></button></div>
+        </div>
     </div>
     <div class="main">
-        <div class="div1"><img src="/image.png"></div>
+        <div class="div1"></div>
         <div class="sub">
             <div class="div2"><h2 style="font-weight: 400;">Largest stock broker in India</h2></div>
         <div class="div3"><p>1.5+ Crore Zerodha clients contribute to over 15% of all retail order volumes in India daily by trading and investing in:</p></div>
