--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="Products"><a href="#" >Products</a></div>
             <div id="Pricing"><a href="#" >Pricing</a></div>
             <div id="Support"><a href="#" >Support</a></div>
-            <div id="men"><i class="fa-solid fa-bars"></i></a></div>
+            <div id="men"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
             
             
         </div>
@@ -40,23 +40,26 @@
     <div class="main">
         <div class="div1"></div>
         <div class="sub">
-            <div class="div2"><h2 style="font-weight: 400;">Largest stock broker in India</h2></div>
+            <div class="div2"><h2 style="font-weight: 500;">Largest stock broker in India</h2></div>
         <div class="div3"><p>1.5+ Crore Zerodha clients contribute to over 15% of all retail order volumes in India daily by trading and investing in:</p></div>
         <div class="div4">
             <div class="div4left">
-                <ul>
-                    <li style="list-style-type:disc">Futures and Options</li>
-                    <li style="list-style-type:disc">Commodity derivatives</li>
-                    <li style="list-style-type:disc">Currency derivatives</li>
+                <ul class="lefty">
+                   <div> <li style="list-style-type:disc">Futures and Options</li></div>
+                    <div><li style="list-style-type:disc">Commodity derivatives</li></div>
+                   <div> <li style="list-style-type:disc">Currency derivatives</li></div>
                 </ul>
             </div>
             <div class="div4right">
-                <ul>
-                    <li style="list-style-type:disc">Stocks & IPOs</li>
-                    <li style="list-style-type:disc">Direct mutual funds</li>
-                    <li style="list-style-type:disc">Bonds and Govt.Securuties</li>
+                <ul class="righty">
+                    <div><li style="list-style-type:disc">Stocks & IPOs</li></div>
+                    <div><li style="list-style-type:disc">Direct mutual funds</li></div>
+                    <div><li style="list-style-type:disc">Bonds and Govt.Securuties</li></div>
                 </ul>
             </div>
+        </div>
+        <div class="div5">
+            <img class="mint" src="/mint.png">
         </div>
 
         </div>
