--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
        <div class="headerlogo"> <img id="logo" src="/zerodhafooter.png"></div>
         <div class="options">
-            <div id="Signup"><a href="/signup.html" >Sign up</a></div>
+            <div id="Signup" ><a href="#" >Signup</a></div>
             <div id="About"><a href="/about.html"  >About</a></div>
             <div id="Products"><a href="#" >Products</a></div>
             <div id="Pricing"><a href="#" >Pricing</a></div>
