--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 
 </head>
 <body>
-    <div class="header">
+    <div class="header" >
        <div class="headerlogo"> <img id="logo" src="/zerodhafooter.png"></div>
         <div class="options">
-            <div id="Signup" ><a href="#" >Signup</a></div>
-            <div id="About"><a href="/about.html"  >About</a></div>
-            <div id="Products"><a href="#" >Products</a></div>
-            <div id="Pricing"><a href="#" >Pricing</a></div>
-            <div id="Support"><a href="#" >Support</a></div>
-            <div id="men"><a href="#"><i class="fa-solid fa-bars"></i></a></div>
+            <div id="Signup" ><a href="/"  >Signup</a></div>
+            <div id="About"><a href="/"  >About</a></div>
+            <div id="Products"><a href="/" >Products</a></div>
+            <div id="Pricing"><a href="/" >Pricing</a></div>
+            <div id="Support"><a href="/" >Support</a></div>
+            <div id="men"><a href="/"><i class="fa-solid fa-bars"></i></a></div>
             
             
         </div>
