--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
@@ -34,7 +35,7 @@
                     <a href="/"  >Pricing</a>
                 </li>
                 <li class="option">
-                    <a href="/"  >Supportt</a>
+                    <a href="/"  >Support</a>
                 </li>
                 <li class="option">
                     <a href="/"  ><i class="fa-solid fa-bars"></i></a>
@@ -54,7 +55,7 @@
     </div> 
       <div class="landr"> 
         <div class="invest"><h1 style="font-weight: 500;font-size: 44px;">Invest in everything</h1></div>
-       <h5 style="font-size: 20px; font-family: Inter ,serif; color: #424242;margin-bottom: 20px;margin-top: 0px;font-weight: 400; ">Online platform to invest in stocks, derivatives, mutual funds, and more</h5>
+        <div class="online"><h5 style="font-size: 20px; font-family: Inter ,serif; color: #424242;margin-bottom: 20px;margin-top: 0px;font-weight: 400; ">Online platform to invest in stocks, derivatives, mutual funds, and more</h5></div>
         <div class="button1"><button > <a href="/signup.html" style="color: white; padding-top: 60px; ">Sign up now</a></button></div>
         </div>
     </div>
@@ -109,7 +110,7 @@ with your money.             </p></pre>
         </div>
         </div>
         <div class="bottomright">
-           <a href="#"> <img style="width: 500px;height: 500px;" src="/console.png"></a>
+           <a href="#"> <img style="width: 50vw;height: 100vh;margin-right: 60px;" src="/console.png"></a>
            <br>
            <a href="#">Explore our products <i class="fa-solid fa-arrow-right"></i> </a>
            <a href="#" style="margin-left: 50px;">Try Kite demo <i class="fa-solid fa-arrow-right"></i></a>
