--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
              -->
             <ul class="navbar">
                 <li class="option">
-                    <a href="/"  >Signup</a>
+                    <a href="https://signup.zerodha.com"  >Signup</a>
                 </li>
                 <li class="option">
                     <a href="/"  >About</a>
@@ -87,14 +87,14 @@
         </div>
     </div>
     <div class="bottom">
-        <div class="bottomleft">
+        <div class="bottomleft" style="line-height: 1.7;">
         <div id="head1" ><h2 style="font-size: 32px; font-weight: 400;">Trust with confidence</h2></div>
-        <div id="head2" ><h3 style="font-weight: 500;">Customer-first always</h3>
-        <pre><p style="color: grey;">That's why 1.5+ crore customers trust Zerodha
+        <div id="head2" ><h3 style="font-weight: 500;line-height: 1.8;">Customer-first always</h3>
+        <pre><p style="color: grey;line-height: 1.7;">That's why 1.5+ crore customers trust Zerodha
 with 4.5+ lakh crores worth of quity investments.
         </p></pre></div>
         <div id="head3"><h3 style="font-weight: 500;">No spam or gimmicks</h3>
-        <pre><p style="color: grey;">No gimmics,spam,"gammification",or annoying push
+        <pre><p style="color: grey;line-height: 1.7;">No gimmics,spam,"gammification",or annoying push
 notifications.High quality apps that you use at your
 pace,the way you like.                    
         </p></pre></div>
@@ -117,7 +117,7 @@ with your money.             </p></pre>
         </div>
     </div>
     <div class="pricing">
-        <div class="pricingleft">
+        <div class="pricingleft" style="line-height: 1.7;">
             <h1 style="font-weight: 400;">Unbeatable pricing</h1>
             <pre><p>We pioneered the concept of discount broking and price
 transparency in India.Flat fees and no hidden charges.
@@ -133,7 +133,7 @@ transparency in India.Flat fees and no hidden charges.
         <div class="varsityleft">
 
         </div>
-        <div class="varsityright">
+        <div class="varsityright" style="line-height: 1.7;">
             <h1 style="font-weight: 400;">Free and open market education</h1>
             <pre><p style="margin-bottom: 10px;">Varsity, the largest online stock market education book in the world
 covering everything from the basics to advanced trading.
