--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             <div id="men"><a href="/"><i class="fa-solid fa-bars"></i></a></div>
              -->
             <ul class="navbar">
-                <li class="option">
-                    <a href="https://signup.zerodha.com"  >Signup</a>
-                </li>
+                <li><a class="nav-links" href="https://signup.zerodha.com">Signup</a></li>
                 <li class="option">
                     <a href="/"  >About</a>
                 </li>
@@ -53,7 +51,7 @@
        <div class="landi">
         <img id="landimg"src="/landing.png">
     </div> 
-      <div class="landr"> 
+      <div class="landr" style="line-height: 1.7;"> 
         <div class="invest"><h1 style="font-weight: 500;font-size: 44px;">Invest in everything</h1></div>
         <div class="online"><h5 style="font-size: 20px; font-family: Inter ,serif; color: #424242;margin-bottom: 20px;margin-top: 0px;font-weight: 400; ">Online platform to invest in stocks, derivatives, mutual funds, and more</h5></div>
         <div class="button1"><button > <a href="/signup.html" style="color: white; padding-top: 60px; ">Sign up now</a></button></div>
